gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail16001.d
version https://git-lfs.github.com/spec/v1
oid sha256:fe7f318c0a50ab7aea1cffac26b14bb8e2afad6c9a2674dd8502d8457010a18a
size 426
